# physics-engine

./: .gitignore  5025CEM.sln  CMakeLists.txt  README.md  imgui.ini  references.txt
5025CEM/: 5025CEM.vcxproj  5025CEM.vcxproj.filters  main.cpp
5025CEM/assets/models/: p3.blend  sphere.blend1
5025CEM/assets/shaders/: debugMesh.frag.glsl  debugPoint.vert.glsl  lit.frag.glsl  lit.vert.glsl
5025CEM/game/: game.hpp  geom.hpp  map.cpp  util.cpp
5025CEM/game/entity/: entity.cpp  entity.hpp  octree.cpp
5025CEM/game/gfx/: gfx.hpp  scene3d.cpp  scene3d.hpp
assets/models/: sphere.blend
assets/shaders/: basic3d.frag.glsl  basic3d.vert.glsl  debug3d.frag.glsl  debug3d.vert.glsl  debugMesh.vert.glsl  debugPoint3d.frag.glsl  debugPoint3d.vert.glsl  line3d.frag.glsl  line3d.vert.glsl  lit.frag.glsl  lit.vert.glsl  surface3d.frag.glsl  surface3d.vert.glsl
assets/tracks/: badlands.mmpz  badlands.mmpz.bak  northPole.mmpz  northPole.mmpz.bak  track3.mmpz  track3.mmpz.bak  track3_2.mmpz  track3_2.mmpz.bak
source/: app.hpp  assets.hpp  body.hpp  debugui.hpp  draw3d.hpp  entity.hpp  game.hpp  geom.hpp  gfx.hpp  gfx3d.hpp  gfx3dDebug.hpp  main.cpp  util.hpp
source/game/: app.cpp  app.hpp  game.cpp  geom.hpp  map.cpp  map.hpp  util.hpp
source/game/entity/: entity.cpp  entity.hpp  octree.cpp  octree.hpp
source/game/gfx/: gfx.cpp  gfx.hpp  scene3d.cpp  scene3d.hpp
source/game/phys/: geom.hpp
